Implement JwtToken for User register and login